# ChangeLog for kde-base/kpdf
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kpdf/ChangeLog,v 1.173 2009/10/12 22:05:13 abcd Exp $

  12 Nov 2009; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
  +kpdf-3.5.10-r2.ebuild, +files/kpdf-3.5.10-xpdf-3.02pl4.patch:
  Fix kpdf security issues, #290470

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> -kpdf-3.5.9.ebuild:
  KDE 3.5.9 removal

  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> kpdf-3.5.10-r1.ebuild:
  alpha/ia64/sparc stable

  12 Jul 2009; Raúl Porcel <armin76@gentoo.org> kpdf-3.5.10.ebuild:
  alpha/ia64/sparc stable wrt #271889

  08 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org> kpdf-3.5.10-r1.ebuild:
  Add ~mips keywords

  18 Jun 2009; Jeroen Roovers <jer@gentoo.org> kpdf-3.5.10-r1.ebuild:
  Stable for HPPA (bug #271889).

  06 Jun 2009; Markus Meier <maekke@gentoo.org> kpdf-3.5.10-r1.ebuild:
  amd64/x86 stable, bug #271889

  03 Jun 2009; Brent Baude <ranger@gentoo.org> kpdf-3.5.10.ebuild:
  Marking kpdf-3.5.10 ppc64 stable for bug 271889

  31 May 2009; nixnut <nixnut@gentoo.org> kpdf-3.5.10.ebuild:
  ppc stable #271889

*kpdf-3.5.10-r1 (29 May 2009)

  29 May 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -files/post-3.5.8-kdegraphics-kpdf.diff, +kpdf-3.5.10-r1.ebuild,
  +files/kpdf-3.5.10-font-hiding.patch, +files/kde-CVE-2009-1188.patch:
  Revision bump, fix security bug 264603, thanks to Robert Buchholz for the
  patches, and font hiding, bug 241678, thanks to Alex Efros for the patch

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> kpdf-3.5.9.ebuild,
  kpdf-3.5.10.ebuild:
  Update dependencies w.r.t. bug 264230, fully-split-out poppler transition.

*kpdf-3.5.10 (13 Sep 2008)

  13 Sep 2008; Carsten Lohrke <carlo@gentoo.org> +kpdf-3.5.10.ebuild:
  Version bump.

  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
  -kpdf-3.5.8-r1.ebuild:
  Removed old versions.
