@@ -5,6 +5,7 @@ DIST kdegraphics-3.5.10.tar.bz2 7440912 RMD160 94278e4419ab99885fc9efae9b6ba5ba7
 DIST kpdf-3.5.10-JBIG2.tar.bz2 5533 RMD160 58bbb77e5d98abdfd3fe629dc34d6f53e67b4c3d SHA1 2d74673ee085ba8f22e4f27c323e5902f34dd525 SHA256 37a1e35b6a4a9ae8324ab5894cae216375c7d05b136386698bc23feca014ddb4
 EBUILD kpdf-3.5.10-r1.ebuild 1001 RMD160 671f9e390ad7cd7d34e4b3f34198455e60693d6c SHA1 6e822e8c2b593305e9ed7ccdc8285091e6403d93 SHA256 1ef28876ff0fa717c2ffd6e9bf8d33bb49950cc5cb661399e3f379bb92f298c9
 EBUILD kpdf-3.5.10-r2.ebuild 1047 RMD160 778b8bf347b7e7fe28019d9e379acd1d2fffcbc8 SHA1 109c30ce6b585344d2838f821fa3600ac259280d SHA256 ddfa7de66c2d31138b159207146d7fb10742d403ac3797b035980a3777c2714c
+EBUILD kpdf-3.5.10-r3.ebuild 1053 RMD160 f7d1ca6e5db1110ea087f8483ad4e4b0fdc790c2 SHA1 9bd8798a48fce211c8e54b4f70afc2d1bd81e8fb SHA256 f01008052d4aa8e3d6e3b20e4e4f76da7b592f3bed988114e05085050fd8f471
 EBUILD kpdf-3.5.10.ebuild 815 RMD160 525fba101344d38aad95814d3673ae3fc9f8a0b2 SHA1 674901cbc98e6c2c6b69ce2936724f2835c69a74 SHA256 2e8bbdcce56b14d6b6582f16ecdccb333dbb1e9fe1b9bb75a2ffb587a217304e
-MISC ChangeLog 23657 RMD160 7689a535591750b06e951c1b3d051434318933c7 SHA1 76ffac80087118ad46fae8adb6ffb3c4ffe6693e SHA256 a53442e8b6c001ee10c95b5913116c467572623fa7e8d83c4d13420e35b499a6
+MISC ChangeLog 23778 RMD160 adee1c3d80fcfac0bfb93546207d719bac42b8b6 SHA1 67f8af3115ba55b7356dea20966dc978e9472dbf SHA256 d093c6a0c235bc74423af3f84918af3582c520cd3bdf4ca46b779a4cdcee43e3
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
